--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <div class='gameboard'>
+            
+        </div>
         <script src='script.js'></script>
     </body>
 </html>
