Added changing board tiles and random turn assignment at start of round

--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     </head>
     <body>
         <div class='gameboard'>
-            
+
+        </div>
+        <div class='game-info'>
+            <p class='turn-text'>Turn: </p>
         </div>
         <script src='script.js'></script>
     </body>
