Added reset button and colors

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         </div>
         <div class='game-info'>
             <p class='turn-text'>Turn: </p>
+            <p class='end-text'></p>
         </div>
         <script src='script.js'></script>
     </body>
